--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Lesson 09 MAP672 Spring 2016</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
-    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+    <script src="http://www.jsdelivr.com/projects/leaflet"></script>
     
     
-   
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="http://www.jsdelivr.com/projects/leaflet"/>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://www.jsdelivr.com/projects/leaflet">
 
     <style>
         body {
