--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Lesson 09 MAP672 Spring 2016</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
-    <script src="https://www.jsdelivr.com/projects/leaflet"></script>
+    <script src="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     
     
     <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://www.jsdelivr.com/projects/leaflet">
+  
 
     <style>
         body {
