--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8 />
-    <title>Lesson 09 MAP672 Spring 2016</title>
+    <title>US Power Plants and Relative Output</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
     <script src="https://cdn.jsdelivr.net/leaflet/0.7.7/leaflet-src.js"></script>
