lighter background color

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         body {
             margin: 0;
             padding: 0;
-            background: #242426;
+            background: #878787;
             font-family: Lato, sans-serif;
             color: #0D0000;
 
         }
         header {
             padding: 6px 10%;
+            text-align: left
         }
         h1 {
             display: inline-block;
@@ -49,6 +50,7 @@
         p {
             font-size: 1em;
             color: #FFFFFF;
+            text-align: justify
         }
     </style>
 </head>
